--- a/plugin.xml
+++ b/plugin.xml
@@ -18,7 +18,7 @@
 		</feature>
         </config-file>
 
-        <js-module src="www/ios/interfaceBridge.js" name="interfaceBridge">
+        <js-module src="www/interfaceBridge.js" name="interfaceBridge">
             <clobbers target="interfaceBridge" />
         </js-module>
 
