--- a/plugin.xml
+++ b/plugin.xml
@@ -9,6 +9,10 @@
     <license></license>
     <keywords>cordova,interfaceBridge</keywords>
 
+    <engines>
+        <engine name="cordova" version=">=3.0.0" />
+    </engines>
+
     <!-- ios -->
     <platform name="ios">
 
