--- a/plugin.xml
+++ b/plugin.xml
@@ -37,8 +37,8 @@
     <!-- android -->
     <platform name="android">
          <config-file target="res/xml/config.xml" parent="/*">
-            <feature name="Battery" >
-                <param name="android-package" value="org.apache.cordova.batterystatus.BatteryListener"/>
+            <feature name="interfaceBridge" >
+                <param name="android-package" value="se.rapidsolutions.InterfaceBridgePlugin"/>
             </feature>
         </config-file>
 
